# tree-sitter-quirrel

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  operators.md  package.json  parse_dagor.ps1  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-quirrel.pc.in
bindings/c/tree_sitter/: tree-sitter-quirrel.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_quirrel/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQuirrelTests/: TreeSitterQuirrelTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: access.txt  assignment.txt  binary.txt  comments.txt  declaration.txt  extra.txt  statements.txt  temp.txt  types.txt  unary.txt
