[package]
name = "tree-sitter-quirrel"
description = "Parser for Quirrel language https://quirrel.io/"
version = "0.1.0"
authors = ["Andrei Voronin <nihlete@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "quirrel"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nihlete/tree-sitter-quirrel"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
